# SE

./: CMakeLists.txt  Eventcounter.3  README.md  Sequencer.3  eventcounter.3  eventcounter.c  eventcounter.h  lnmanpages.txt  seqev.c  seqev.h  sequencer.3  sequencer.c  sequencer.h
tests/: alternate_seqev.c  common.h
